updated color correction for dark mode

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -6,15 +6,20 @@
   font-size: 11pt;
 
   &:hover {
-    opacity: .5;
+    opacity: $opacity;
   }
 }
 
 .button-hours {
+  color: $black;
   display: inline-block;
   width: 100%;
   margin: 8px 0;
   font-size: 25pt;
+  &:hover, &:active {
+    color: $black;
+    opacity: $opacity;
+  }
 }
 
 .button-custom {
