--- a/app/assets/stylesheets/components/_containers.scss
+++ b/app/assets/stylesheets/components/_containers.scss
@@ -32,6 +32,7 @@
 .container-ticket-memos{
   // display: flex;
   height: 500px;
+  color: inherit;
 }
 
 .container-memo-list{
