--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -14,3 +14,4 @@ $background-color: #FFE4B8;
 $diluted-background: transparentize($background-color, .2);
 $black: #000;
 $white: #FFF;
+$opacity: 0.5;
